--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -34,7 +34,7 @@ EXPOSE 8087
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-  CMD curl -f http://localhost:8087/api/auth/me || exit 1
+  CMD curl -f http://localhost:8087/actuator/health || exit 1
 
 # Run the application
 ENTRYPOINT ["java", "-jar", "app.jar"]
