--- a/render.yaml
+++ b/render.yaml
@@ -12,14 +12,44 @@ services:
     envVars:
       - key: SPRING_PROFILES_ACTIVE
         value: prod
+      - key: SERVER_PORT
+        value: "8087"
       - key: DATABASE_URL
         fromDatabase:
           name: portfolio-tracker-db
           property: connectionString
+      - key: DB_USERNAME
+        fromDatabase:
+          name: portfolio-tracker-db
+          property: user
+      - key: DB_PASSWORD
+        fromDatabase:
+          name: portfolio-tracker-db
+          property: password
       - key: JWT_SECRET
         generateValue: true
+      - key: JWT_EXPIRATION
+        value: "86400000"
       - key: ALPHA_VANTAGE_API_KEY
         value: demo
+      - key: ALPHA_VANTAGE_BASE_URL
+        value: https://www.alphavantage.co/query
+      - key: CORS_ALLOWED_ORIGINS
+        value: "http://localhost:3000,http://localhost:5173,http://localhost:5174,http://localhost:5175,http://localhost:5176,http://localhost:5177,http://localhost:5178,http://localhost:5179,http://localhost:5180,https://portfolio-tracker-latest-k69y.onrender.com"
+      - key: SPRING_JPA_HIBERNATE_DDL_AUTO
+        value: update
+      - key: SPRING_JPA_SHOW_SQL
+        value: "false"
+      - key: SPRING_JPA_OPEN_IN_VIEW
+        value: "false"
+      - key: SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT
+        value: org.hibernate.dialect.PostgreSQLDialect
+      - key: SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL
+        value: "false"
+      - key: LOGGING_LEVEL_COM_PORTFOLIOTRACKER
+        value: INFO
+      - key: LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_SECURITY
+        value: WARN
 
 databases:
   - name: portfolio-tracker-db
