Delete application.properties and move all config to .env file
- Deleted application.properties file completely
- Moved all Spring Boot configuration to .env file
- Updated render.yaml with all Spring Boot properties
- Spring Boot will now read all configuration from environment variables
- This should resolve any configuration conflicts causing 403 errors

--- a/render.yaml
+++ b/render.yaml
@@ -50,6 +50,20 @@ services:
         value: INFO
       - key: LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_SECURITY
         value: WARN
+      - key: SPRING_DATASOURCE_URL
+        fromDatabase:
+          name: portfolio-tracker-db
+          property: connectionString
+      - key: SPRING_DATASOURCE_USERNAME
+        fromDatabase:
+          name: portfolio-tracker-db
+          property: user
+      - key: SPRING_DATASOURCE_PASSWORD
+        fromDatabase:
+          name: portfolio-tracker-db
+          property: password
+      - key: SPRING_DATASOURCE_DRIVER_CLASS_NAME
+        value: org.postgresql.Driver
 
 databases:
   - name: portfolio-tracker-db
