--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,3 +6,22 @@ alpha.vantage.api.key=${ALPHA_VANTAGE_API_KEY}
 alpha.vantage.base.url=${ALPHA_VANTAGE_BASE_URL:https://www.alphavantage.co/query}
 
 cors.allowed.origins=${CORS_ALLOWED_ORIGINS}
+
+# Performance optimizations
+spring.jpa.properties.hibernate.jdbc.batch_size=${SPRING_JPA_PROPERTIES_HIBERNATE_JDBC_BATCH_SIZE:20}
+spring.jpa.properties.hibernate.order_inserts=${SPRING_JPA_PROPERTIES_HIBERNATE_ORDER_INSERTS:true}
+spring.jpa.properties.hibernate.order_updates=${SPRING_JPA_PROPERTIES_HIBERNATE_ORDER_UPDATES:true}
+spring.jpa.properties.hibernate.jdbc.batch_versioned_data=${SPRING_JPA_PROPERTIES_HIBERNATE_JDBC_BATCH_VERSIONED_DATA:true}
+
+# Connection pool optimization
+spring.datasource.hikari.maximum-pool-size=${SPRING_DATASOURCE_HIKARI_MAXIMUM_POOL_SIZE:10}
+spring.datasource.hikari.minimum-idle=${SPRING_DATASOURCE_HIKARI_MINIMUM_IDLE:5}
+spring.datasource.hikari.idle-timeout=${SPRING_DATASOURCE_HIKARI_IDLE_TIMEOUT:300000}
+spring.datasource.hikari.max-lifetime=${SPRING_DATASOURCE_HIKARI_MAX_LIFETIME:1200000}
+spring.datasource.hikari.connection-timeout=${SPRING_DATASOURCE_HIKARI_CONNECTION_TIMEOUT:20000}
+
+# Security headers
+server.servlet.session.timeout=${SERVER_SERVLET_SESSION_TIMEOUT:30m}
+server.servlet.session.cookie.secure=${SERVER_SERVLET_SESSION_COOKIE_SECURE:true}
+server.servlet.session.cookie.http-only=${SERVER_SERVLET_SESSION_COOKIE_HTTP_ONLY:true}
+server.servlet.session.cookie.same-site=${SERVER_SERVLET_SESSION_COOKIE_SAME_SITE:strict}
