Fix Dockerfile and update render.yaml
- Fixed Dockerfile to use proper multi-stage build
- Removed invalid --from=build reference
- Updated render.yaml to use correct Dockerfile path
- Application now builds properly for both local and production deployment

--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: portfolio-tracker-backend
     env: docker
-    dockerfilePath: ./backend/Dockerfile.prod
+    dockerfilePath: ./backend/Dockerfile
     plan: free
     region: oregon
     branch: main
