Fix Docker production setup
- Updated Dockerfile to build from root directory context
- Added curl installation for health check
- Fixed .env file path in Dockerfile
- Updated render.yaml to use rootDir for proper build context
- Docker build now works successfully with .env file access
- Production deployment should now work correctly

--- a/render.yaml
+++ b/render.yaml
@@ -9,6 +9,7 @@ services:
     buildCommand: ""
     startCommand: ""
     healthCheckPath: /actuator/health
+    rootDir: .
     envVars:
       - key: SPRING_PROFILES_ACTIVE
         value: prod
