--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,17 +7,17 @@ alpha.vantage.base.url=${ALPHA_VANTAGE_BASE_URL:https://www.alphavantage.co/quer
 
 cors.allowed.origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:5173}
 
-# Database Configuration
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:h2:mem:testdb}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:sa}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:}
-spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_NAME:org.h2.Driver}
+# Database Configuration - PostgreSQL for production, H2 for local development
+spring.datasource.url=${SPRING_DATASOURCE_URL:${DATABASE_URL:jdbc:h2:mem:testdb}}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:${DB_USERNAME:sa}}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:${DB_PASSWORD:}}
+spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_NAME:org.postgresql.Driver}
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:create-drop}
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
 spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL:false}
 spring.jpa.open-in-view=${SPRING_JPA_OPEN_IN_VIEW:false}
-spring.jpa.properties.hibernate.dialect=${SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT:org.hibernate.dialect.H2Dialect}
+spring.jpa.properties.hibernate.dialect=${SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT:org.hibernate.dialect.PostgreSQLDialect}
 spring.jpa.properties.hibernate.format_sql=${SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL:false}
 
 # Performance optimizations
