--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -18,10 +18,10 @@ cors.allowed.origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localho
 # Database Configuration
 # ---------------------------
 # PostgreSQL (production) - environment variables are required
-spring.datasource.url=${SPRING_DATASOURCE_URL:${DATABASE_URL}}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:${DB_USERNAME}}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:${DB_PASSWORD}}
-spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_NAME:${DATABASE_DRIVER_CLASS_NAME:org.postgresql.Driver}}
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
