--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,11 +17,12 @@ cors.allowed.origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localho
 # ---------------------------
 # Database Configuration
 # ---------------------------
-# PostgreSQL (production) - environment variables are required
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_NAME:org.postgresql.Driver}
+# PostgreSQL (production) - use Spring Boot auto-configuration
+# Let Spring Boot auto-detect the database configuration from environment variables
+
+# Debug logging to see environment variables
+logging.level.org.springframework.boot.autoconfigure.jdbc=DEBUG
+logging.level.com.zaxxer.hikari=DEBUG
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
