Fix duplicate database environment variables in render.yaml

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -18,7 +18,7 @@ cors.allowed.origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localho
 # Database Configuration
 # ---------------------------
 # PostgreSQL (production) - use Spring Boot auto-configuration
-# Let Spring Boot auto-detect the database configuration from environment variables
+# Spring Boot will automatically use SPRING_DATASOURCE_URL, SPRING_DATASOURCE_USERNAME, SPRING_DATASOURCE_PASSWORD
 
 # Debug logging to see environment variables
 logging.level.org.springframework.boot.autoconfigure.jdbc=DEBUG
