--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,10 +17,10 @@ cors.allowed.origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localho
 # ---------------------------
 # Database Configuration
 # ---------------------------
-# PostgreSQL (production) - explicit configuration with fallbacks
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/portfolio_tracker}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:password}
+# Use environment variables if available, otherwise use localhost fallback
+spring.datasource.url=${DATABASE_URL:${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/portfolio_tracker}}
+spring.datasource.username=${DB_USERNAME:${SPRING_DATASOURCE_USERNAME:postgres}}
+spring.datasource.password=${DB_PASSWORD:${SPRING_DATASOURCE_PASSWORD:password}}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Debug logging to see environment variables
