--- a/render.yaml
+++ b/render.yaml
@@ -14,6 +14,18 @@ services:
         value: prod
       - key: SERVER_PORT
         value: "8087"
+      - key: DATABASE_URL
+        fromDatabase:
+          name: portfolio-tracker-db
+          property: connectionString
+      - key: DB_USERNAME
+        fromDatabase:
+          name: portfolio-tracker-db
+          property: user
+      - key: DB_PASSWORD
+        fromDatabase:
+          name: portfolio-tracker-db
+          property: password
       - key: JWT_SECRET
         generateValue: true
       - key: JWT_EXPIRATION
